--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,1 +1,158 @@
-<h1>This is a placeholder for the home page</h1>
+ <div id="load">
+            <section class="center" id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="span10 offset1">
+                            <div class="hero ">
+                                <!-- Main hero unit for a primary marketing message or call to action -->
+                                <h1 rel="tooltip" title="A beautiful base font 'Lato' provided by Google Fonts" data-placement="right">A clean cut, modern and responsive landing page for your web app.</h1>
+                                <div class="video" rel="tooltip" title="Embed any product demos or promotional videos without worrying about if they will fit to different screen sizes. Don't want to include a video? Easy to remove with no side effects. " data-placement="right">
+                                    <iframe src="http://player.vimeo.com/video/13776542?title=0&amp;byline=0&amp;portrait=0&amp;color=38e8ae" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                                </div>
+                                <p class="cursive" rel="tooltip" title="Great complementary font 'Trocchi' provided by Google Fonts " data-placement="bottom">No clutter. Straight to the point.</p>
+                            </div>
+                        </div>
+                        <div class="span8 offset2">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="dark" id="signup">
+                <div class="container">
+                    <div class="row">
+                        <div class="span12 center">
+                            <h2 class="cursive"> Start your 30 day free trial </h2>
+                            <div class="input-append">
+                                <input class="span5 input-large" placeholder="you@email.com" type="text">
+                                <button class="btn btn-outline btn-dark btn-large" type="button">
+                                    Sign Up!
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="red" id="features">
+                <div class="container">
+                    <!-- List of the key, unquie features  of your app -->
+                    <div class="row center">
+                        <div class="span4">
+                            <div class="feature">
+                                <h2>Modern and Clean</h2>
+                                <i class="icon-dashboard icon-feature" rel="tooltip" title="220 beautiful icons provided by Font Awesome, the iconic font designed for use with Twitter Bootstrap." data-placement="bottom"></i>
+                                <p>Get an eye catching landing page to wow your vistors. Fanasatic typography provided by Google Fonts.  </p>
+                                <p><a class="btn btn-outline btn-blue margin-verticals" href="#" rel="tooltip" title="Elegant buttons. 4 distinct color combinations (and inverses) are included." data-placement="right">View details &raquo;</a></p>
+                            </div>
+                        </div>
+                        <div class="span4">
+                            <div class="feature">
+                                <h2>Responsive</h2>
+                                <i class="icon-beaker icon-feature" rel="tooltip" title="220 beautiful icons provided by Font Awesome, the iconic font designed for use with Twitter Bootstrap." data-placement="bottom"></i>
+                                <p> Desktop or mobile, no matter. A great looking template on any platform. Try resizing the browser! </p>
+                                <p><a class="btn btn-outline btn-red margin-verticals" href="#" rel="tooltip" title="Elegant buttons. 4 distinct color combinations (and inverses) are included." data-placement="right">View details &raquo;</a></p>
+                            </div>
+                       </div>
+                        <div class="span4">
+                            <div class="feature">
+                                <h2>Build Now</h2>
+                                <i class="icon-bar-chart icon-feature" rel="tooltip" title="220 beautiful icons provided by Font Awesome, the iconic font designed for use with Twitter Bootstrap." data-placement="bottom"></i>
+                                <p>12 awesome landing pages included (3 landing page layouts with 4 unique color combinations each). </p>
+                                <p><a class="btn btn-outline btn-dark margin-verticals" href="#" rel="tooltip" title="Elegant buttons. 4 distinct color combinations (and inverses) are included." data-placement="right">View details &raquo;</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="blue" id="pricing">
+                <div class="container">
+                    <div class="row pricing">
+                        <h1 class="trocchi center shadow-text"> Clear pricing, with no hidden costs. </h1>
+                        <div class = "span3">
+                            <div class="plan" rel="tooltip" title="Pricing tables are included. Easily customizable with your button of choice." data-placement="top">
+                                <h3> 
+                                    Basic
+                                </h3>
+                                <h4> 
+                                    Free 
+                                </h4>
+
+                                <ul class='unstyled'>
+                                    <li>
+                                        <i class="icon-ok"></i> Vestibulum id ligula porta felis euismod semper.
+                                    </li>
+                                    <li>
+                                        <i class="icon-ok"></i> 1 user per account
+                                    </li>
+                                </ul>
+                                <p class="center">
+                                    <a class="btn btn-large btn-outline btn-white" href="#">
+                                        <i class="icon-user"></i>
+                                            Try it now
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class = "span3">
+                            <div class="plan" rel="tooltip" title="Pricing tables are included. Easily customizable with your button of choice." data-placement="top">
+                                <h3> Silver </h3>
+                                <h4> $5 <span class="tail"> per month </span> </h4>
+                                <ul class='unstyled points'>
+                                    <li>
+                                        <i class="icon-ok"></i> Vestibulum id ligula porta felis euismod semper.
+                                    </li>
+                                    <li>
+                                        <i class="icon-ok"></i> 3 users per account
+                                    </li>
+                                </ul>
+                                <p class="center">
+                                    <a class="btn btn-large btn-outline btn-blue" href="#">
+                                        <i class="icon-shopping-cart"></i>
+                                        Get started
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class = "span3">
+                            <div class="plan" rel="tooltip" title="Pricing tables are included. Easily customizable with your button of choice." data-placement="top">
+                                <h3> Gold </h3>
+                                <h4> $10 <span class="tail"> per month </span> </h4>
+                                <ul class='unstyled'>
+                                    <li>
+                                        <i class="icon-ok"></i> Vestibulum id ligula porta felis euismod semper.
+                                    </li>
+                                    <li>
+                                        <i class="icon-ok"></i> 10 users per account
+                                    </li>
+                                </ul>
+                                <p class="center">
+                                    <a class="btn btn-large btn-outline btn-red" href="#">
+                                        <i class="icon-shopping-cart"></i>
+                                        Get started
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class = "span3">
+                            <div class="plan" rel="tooltip" title="Pricing tables are included. Easily customizable with your button of choice." data-placement="top">
+                                <h3> Platinum  </h3>
+                                <h4> $25 <span class="tail"> per month </span> </h4>
+                                <ul class='unstyled'>    
+                                    <li>
+                                        <i class="icon-ok"></i> Vestibulum id ligula porta felis euismod semper.
+                                    </li>
+                                    <li>
+                                        <i class="icon-ok"></i> 25 users per account 
+                                    </li>
+                                </ul>
+                                <p class="center">
+                                    <a class="btn btn-large btn-outline btn-dark" href="#">
+                                        <i class="icon-shopping-cart"></i>
+                                        Get started
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
