--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -133,7 +133,13 @@ footer .rights {
 }
 .video {
   padding-top: 30px;
-  width: 80%;
-  max-width: 480px;
+  width: 100%;
+  height: 100%;
+  max-width: 960px;
   margin: 0 auto;
+}
+
+.video iframe{
+  width: 100%;
+  height: 100%;
 }
