--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,163 +3,152 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Lando | A clean, simple and modern landing page</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Brackets 4 Life</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
-        <%= stylesheet_link_tag    "application", :media => "all" %>
-		  <%= javascript_include_tag "application" %>
-		  <%= csrf_meta_tags %>
-        <!-- <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/responsive.css">
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+</head>
 
-        <link rel="stylesheet" href="css/main.css"> -->
-    </head>
-    <body data-spy="scroll" data-target=".navbar">
-
-<!--[if lt IE 7]>
+<body data-spy="scroll" data-target=".navbar">
+        <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-        <![endif]-->
+            <![endif]-->
 
-        <div class="navbar navbar-transparent navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="index.html">Lando</a>
-                    <div class="nav-collapse collapse pull-right">
-                        <ul class="nav">
-                            <li class="active"><a href="#about">About us</a></li>
-                            <li><a href="#signup">Sign Up</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#pricing">Pricing</a></li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                    Landing page #1
-                                    <i class="icon-caret-down"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="ajax" href="#" data-target="plain-landing-1.html">Plain</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="blue-landing-1.html">Blue</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="red-landing-1.html">Red</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="multi-landing-1.html">Mixed</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                    Landing page #2
-                                    <i class="icon-caret-down"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="ajax" href="#" data-target="plain-landing-2.html">Plain</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="blue-landing-2.html">Blue</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="red-landing-2.html">Red</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="multi-landing-2.html">Mixed</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                    Landing page #3
-                                    <i class="icon-caret-down"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="ajax" href="#" data-target="plain-landing-3.html">Plain</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="blue-landing-3.html">Blue</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="red-landing-3.html">Red</a>
-                                    </li>
-                                    <li>
-                                        <a class="ajax" href="#" data-target="multi-landing-3.html" data-theme='red'>Mixed</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
+            <div class="navbar navbar-transparent navbar-fixed-top">
+                <div class="navbar-inner">
+                    <div class="container">
+                        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </a>
+                        <a class="brand" href="index.html">Lando</a>
+                        <div class="nav-collapse collapse pull-right">
+                            <ul class="nav">
+                                <li class="active"><a href="#about">About us</a></li>
+                                <li><a href="#signup">Sign Up</a></li>
+                                <li><a href="#features">Features</a></li>
+                                <li><a href="#pricing">Pricing</a></li>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+                                        Landing page #1
+                                        <i class="icon-caret-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="ajax" href="#" data-target="plain-landing-1.html">Plain</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="blue-landing-1.html">Blue</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="red-landing-1.html">Red</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="multi-landing-1.html">Mixed</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+                                        Landing page #2
+                                        <i class="icon-caret-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="ajax" href="#" data-target="plain-landing-2.html">Plain</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="blue-landing-2.html">Blue</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="red-landing-2.html">Red</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="multi-landing-2.html">Mixed</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
+                                        Landing page #3
+                                        <i class="icon-caret-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="ajax" href="#" data-target="plain-landing-3.html">Plain</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="blue-landing-3.html">Blue</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="red-landing-3.html">Red</a>
+                                        </li>
+                                        <li>
+                                            <a class="ajax" href="#" data-target="multi-landing-3.html" data-theme='red'>Mixed</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div><!--/.nav-collapse -->
+                    </div>
                 </div>
             </div>
-        </div>
 
-<!-- alerts used for devise, etc. -->
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+            <!-- alerts used for devise, etc. -->
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
 
-<%= yield %>
+            <%= yield %>
 
 
-        <footer>
-            <ul  class="unstyled credit center">
-                <li rel="tooltip" title="Any feedback is welcome. Reach out to me on twitter (@cameronmaske) or drop me an email cam[at]closedlooplabs.co.uk" data-placement="top"> 
-                    Designed by <a href="http://twitter.com/cameronmaske"> Cameron Maske </a> from <a href="http://www.closedlooplabs.co.uk/"> Closed Loop Labs </a>
-                </li>
-            </ul>
-            <ul class="unstyled links center">
-                <li>
-                    <a href="">
-                        Contact Us
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        FAQ
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        Privacy Policy
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        Terms of Service
-                    </a>
-                </li>
-            </ul>
-            <ul  class="unstyled rights center">
-                <li> 
-                    Copyright &copy; 2012 Company. All rights reserved 
-                </li>
-            </ul>
-        </footer>
+            <footer>
+                <ul  class="unstyled credit center">
+                    <li rel="tooltip" title="Any feedback is welcome. Reach out to me on twitter (@cameronmaske) or drop me an email cam[at]closedlooplabs.co.uk" data-placement="top"> 
+                        Designed by <a href="http://twitter.com/cameronmaske"> Cameron Maske </a> from <a href="http://www.closedlooplabs.co.uk/"> Closed Loop Labs </a>
+                    </li>
+                </ul>
+                <ul class="unstyled links center">
+                    <li>
+                        <a href="">
+                            Contact Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            FAQ
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Privacy Policy
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Terms of Service
+                        </a>
+                    </li>
+                </ul>
+                <ul  class="unstyled rights center">
+                    <li> 
+                        Copyright &copy; 2012 Company. All rights reserved 
+                    </li>
+                </ul>
+            </footer>
 
-        <link href='http://fonts.googleapis.com/css?family=Questrial|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Trocchi' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Questrial|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Trocchi' rel='stylesheet' type='text/css'>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+            <script>window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')</script>
 
-        <!-- <script type="text/javascript" src="js/bootstrap-scrollspy.js"></script>
-
-        <script type="text/javascript" src="js/bootstrap-dropdown.js"></script>
-
-        <script type="text/javascript" src="js/bootstrap-collapse.js"></script> -->
-
-        <script type="text/javascript" src="js/bootstrap-tooltip.js"></script>
-        <script type="text/javascript">
+            <script type="text/javascript">
             $("[rel=tooltip]").tooltip();
             $("body").on('click', '.ajax', function() {
                 var url, theme;
@@ -172,9 +161,7 @@
                 });
                 return false
             });
-        </script>
-        <!-- <script type="text/javascript" src="js/fitvid.js"></script>
-        <script type="text/javascript" src="js/launch.js"></script> -->
+            </script>
 
-    </body>
-</html>
+        </body>
+        </html>
