put if statement on alert msg

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,8 +106,13 @@
         </div>
 
 <!-- alerts used for devise, etc. -->
+<% if(notice) %>
 <p class="notice"><%= notice %></p>
+<% end %>
+
+<% if(alert) %>
 <p class="alert"><%= alert %></p>
+<% end %>
 
 <%= yield %>
 
