--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -132,14 +132,16 @@ footer .rights {
   padding: 0 48px;
 }
 .video {
-  padding-top: 30px;
+  padding-top: 0px;
   width: 100%;
   height: 100%;
-  max-width: 960px;
+  /*max-width: 960px;*/
   margin: 0 auto;
 }
-
 .video iframe{
   width: 100%;
   height: 100%;
+}
+#load .container .{
+
 }
