--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,70 +31,8 @@
                         <a class="brand" href="index.html">Lando</a>
                         <div class="nav-collapse collapse pull-right">
                             <ul class="nav">
-                                <li class="active"><a href="#about">About us</a></li>
+                                <li class="active"><a href="#about">Home</a></li>
                                 <li><a href="#signup">Sign Up</a></li>
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#pricing">Pricing</a></li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                        Landing page #1
-                                        <i class="icon-caret-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a class="ajax" href="#" data-target="plain-landing-1.html">Plain</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="blue-landing-1.html">Blue</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="red-landing-1.html">Red</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="multi-landing-1.html">Mixed</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                        Landing page #2
-                                        <i class="icon-caret-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a class="ajax" href="#" data-target="plain-landing-2.html">Plain</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="blue-landing-2.html">Blue</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="red-landing-2.html">Red</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="multi-landing-2.html">Mixed</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
-                                        Landing page #3
-                                        <i class="icon-caret-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a class="ajax" href="#" data-target="plain-landing-3.html">Plain</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="blue-landing-3.html">Blue</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="red-landing-3.html">Red</a>
-                                        </li>
-                                        <li>
-                                            <a class="ajax" href="#" data-target="multi-landing-3.html" data-theme='red'>Mixed</a>
-                                        </li>
-                                    </ul>
-                                </li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div>
