--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<!-- <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -15,4 +15,30 @@
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "devise/shared/links" %> -->
+
+<div id="load">
+	<section class="dark" id="story">
+		<div class="container">
+			<div class="row">
+				<div class="span12 center">
+					<h2 class="cursive"> Sign Up</h2>
+					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+					<p><%= devise_error_messages! %></p>
+
+						<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
+
+							<div><%= f.password_field :password, :placeholder => 'Password' %></div><br/>
+
+								<div><%= f.password_field :password_confirmation, :placeholder => 'Password' %></div><br/>
+
+								<div><%= f.submit "Sign up" %></div>
+								<% end %>
+
+								<div><%= render "devise/shared/links" %></div>
+								<br/><br/>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
