--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
                         <a class="brand" href="index.html">Lando</a>
                         <div class="nav-collapse collapse pull-right">
                             <ul class="nav">
-                                <li class="active"><a href="/">Home</a></li>
-                                <li><a href="#signup">Sign Up</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/users/sign_up">Sign Up</a></li>
                                 <li><a href="/about">About Us</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
