--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,3 @@
-<!-- <h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %> -->
 
 <div id="load">
 	<section class="dark" id="story">
@@ -24,7 +6,7 @@
 				<div class="span12 center">
 					<h2 class="cursive"> Sign Up</h2>
 					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-					<p><%= devise_error_messages! %></p>
+					<div class="devise-errors"><%= devise_error_messages! %></div>
 
 						<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
 
