--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </a>
-                        <a class="brand" href="index.html">Lando</a>
+                        <a class="brand" href="/">Lando</a>
                         <div class="nav-collapse collapse pull-right">
                             <ul class="nav">
                                 <li><a href="/">Home</a></li>
