--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,9 @@
 				<div class="span12 center">
 					<h2 class="cursive"> Sign Up</h2>
 					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-					<div class="devise-errors"><%= devise_error_messages! %></div>
+					<% if @user.errors.any? %>
+						<div class="devise-errors"><%= devise_error_messages! %></div>
+					<% end %>
 
 						<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
 
