video js moved to home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,3 +37,18 @@
         </div>
     </section>
 </div>
+
+<script type="text/javascript">
+  $("[rel=tooltip]").tooltip();
+  $("body").on('click', '.ajax', function() {
+    var url, theme;
+    url = $(this).data('target');
+    theme = $(this).data('theme'); 
+    $("body").removeAttr("class")
+    $("body").addClass(theme);
+    $("#load").load(url + ' .body', function(){
+      $(".video").fitVids();
+    });
+    return false
+  });
+  </script>
