--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">Brackets4Life</a>
+      <a class="brand" href="/"><%= image_tag("logo.png")%><h1>Brackets4Life</h1></a>
       <div class="nav-collapse collapse pull-right">
         <ul class="nav">
           <li><a href="/">Home</a></li>
