--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,23 @@
-<h2>Forgot your password?</h2>
+<div id="load">
+	<section class="dark" id="story">
+		<div class="container">
+			<div class="row">
+				<div class="span12 center">
+					<h2 class="cursive">Forgot your password?</h2>
+					<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+					<% if @user.errors.any? %>
+					<div class="devise-errors"><%= devise_error_messages! %></div>
+					<% end %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+					<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+					<div><%= f.submit "Send me reset password instructions" %></div>
+					<% end %>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+					<div><%= render "devise/shared/links" %></div>
+					<br/><br/>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
