--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,22 +7,22 @@
 					<h2 class="cursive"> Sign Up</h2>
 					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 					<% if @user.errors.any? %>
-						<div class="devise-errors"><%= devise_error_messages! %></div>
+					<div class="devise-errors"><%= devise_error_messages! %></div>
 					<% end %>
 
-						<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
+					<div><%= f.email_field :email, :placeholder => "Email" %></div><br/>
 
-							<div><%= f.password_field :password, :placeholder => 'Password' %></div><br/>
+					<div><%= f.password_field :password, :placeholder => 'Password' %></div><br/>
 
-								<div><%= f.password_field :password_confirmation, :placeholder => 'Password' %></div><br/>
+					<div><%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %></div><br/>
 
-								<div><%= f.submit "Sign up" %></div>
-								<% end %>
+					<div><%= f.submit "Sign up" %></div>
+					<% end %>
 
-								<div><%= render "devise/shared/links" %></div>
-								<br/><br/>
-							</div>
-						</div>
-					</div>
-				</section>
+					<div><%= render "devise/shared/links" %></div>
+					<br/><br/>
+				</div>
 			</div>
+		</div>
+	</section>
+</div>
