--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,19 +19,18 @@
             <div class="row">
                 <div class="span12 center">
                     <h2 class="cursive"> Get Started </h2>
-                    (These are just temporary links, and should be styled/changed.)
                     <br/><br/>
                 </div>
             </div>
             <div class="row">
                 <div class="span4 center">
-                    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+                    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => 'btn' %>
                 </div>
                 <div class="span4 center">
-                    <%= link_to "Sign in with Email", new_user_registration_path %>
+                    <%= link_to "Sign in with Email", new_user_registration_path, :class => 'btn' %>
                 </div>  
                 <div class="span4 center">
-                    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+                    <%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class => 'btn' %>
                 </div>
             </div>
         </div>
