--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -97,8 +97,7 @@
     <article class="container" id="level7" data-bind="if: levels['7']().length === 1">
         <div class="row">
             <div class="span12">
-                <h1>Winner - <span data-bind="text: levels['7']()[0].name"></span></h1>
-                <img data-bind="attr: {src: levels['7']()[0].image}" height="300" height="300"/>
+                <h2>Your Bracket Was Created Successfully!</h2>
             </div>
         </div>
     </article>
