--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to "My Brackets", "#" %>
+                  <%= link_to "My Brackets", brackets_path %>
                 </li>
                 <li>
                   <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
