--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -1,15 +1,16 @@
     <article class="container" id="level1" data-bind="foreach: levels['1']()">
         <div class="row">
-            <div class="span12">
+            <div class="span12 game">
                 <!-- ko foreach: players -->
-                <a class="btn btn-primary btn-large" data-bind="click: function() { $root.setWinner($parent, $data, '1') }">
-                    <img height="200px" width="200px" data-bind="attr: {src: image}"/>
-                    <span data-bind="text: name"></span>
+                <a class="btn btn-primary btn-large team" data-bind="click: function() { $root.setWinner($parent, $data, '1') }">
+                    <img class="teamLogo" data-bind="attr: {src: image}"/>
+                    <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <span data-bind="if: typeof winner() !== 'undefined'">
-                    <span data-bind="text: winner().name"></span>
-                </span>
+                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                    <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
+                    <div class="teamName" data-bind="text: winner().name"></div>
+                </div>
             </div>
         </div>
     </article>
